--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,5 +3,5 @@ add_test(
   COMMAND pytest ${CMAKE_CURRENT_SOURCE_DIR} -x -vv)
 
 add_executable(FfmpegTest ffmpeg_test.cpp)
-target_link_libraries(FfmpegTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN} scanner stdlib)
+target_link_libraries(FfmpegTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN} scanner scanner_stdlib)
 add_test(FfmpegTests FfmpegTest)
