--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -21,8 +21,9 @@ RUN cd /opt/scanner && \
           -D BUILD_CUDA=${gpu} \
           .. && \
     cd .. && \
-    (yes | pip uninstall grpcio protobuf) && \
-    ./build.sh
+    (yes | pip3 uninstall grpcio protobuf) && \
+    ./build.sh && \
+    ldconfig
 
 ENV LC_ALL C.UTF-8
 ENV LANG C.UTF-8
