--- a/stdlib/CMakeLists.txt
+++ b/stdlib/CMakeLists.txt
@@ -13,6 +13,12 @@ set(STDLIB_LIBRARIES)
 set(OPENCV_MAJOR_VERSION 3)
 set(OPENCV_COMPONENTS)
 
+# Can't build OpenPose on Apple
+if(APPLE)
+  message(STATUS "OpenPose does not support macOS, disabling.")
+  set(BUILD_OPENPOSE_OPS OFF)
+endif()
+
 find_package(Halide REQUIRED)
 set(HALIDE_DISTRIB_DIR "${Halide_DIR}")
 set(HALIDE_DISTRIB_USE_STATIC_LIBRARY TRUE)
