Prototype of new scheduler

--- a/scanner/engine/CMakeLists.txt
+++ b/scanner/engine/CMakeLists.txt
@@ -28,7 +28,8 @@ set(SOURCE_FILES
   sample_op.cpp
   space_op.cpp
   slice_op.cpp
-  unslice_op.cpp)
+  unslice_op.cpp
+  scheduler.cpp)
 
 add_library(engine OBJECT
   ${SOURCE_FILES})
