Halfway checkin - Make master.cpp support per Op scheduling

--- a/scanner/engine/CMakeLists.txt
+++ b/scanner/engine/CMakeLists.txt
@@ -28,8 +28,7 @@ set(SOURCE_FILES
   sample_op.cpp
   space_op.cpp
   slice_op.cpp
-  unslice_op.cpp
-  scheduler.cpp)
+  unslice_op.cpp)
 
 add_library(engine OBJECT
   ${SOURCE_FILES})
