--- a/examples/tutorials/resize_op/CMakeLists.txt
+++ b/examples/tutorials/resize_op/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 
 execute_process(
   OUTPUT_VARIABLE SCANNER_CMAKE_PATH
-  COMMAND python -c "import scannerpy.stdlib.build_flags as b; b.print_cmake()")
+  COMMAND python3 -c "import scannerpy.stdlib.build_flags as b; b.print_cmake()")
 include(${SCANNER_CMAKE_PATH})
 
 # build_op will create a shared library called lib${LIB_NAME}.so that builds
