--- a/.travis.yml
+++ b/.travis.yml
@@ -56,3 +56,6 @@ jobs:
       script: "travis_retry ./scripts/travis-build.sh"
       env:
         - BUILD_TYPE=gpu-9.1-cudnn7
+    - stage: build
+      script: "travis_retry ./scripts/travis-osx-build.sh"
+      os: osx
