--- a/.travis.yml
+++ b/.travis.yml
@@ -57,5 +57,10 @@ jobs:
       env:
         - BUILD_TYPE=gpu-9.1-cudnn7
     - stage: build
+      language: generic
+      services:
+        addons:
+      install:
+        pip3 install requests[security] --upgrade
       script: "travis_retry ./scripts/travis-osx-build.sh"
       os: osx
