Update Makfile for resize_op

--- a/examples/tutorials/resize_op/Makefile
+++ b/examples/tutorials/resize_op/Makefile
@@ -1,9 +1,10 @@
 # Scanner outputs build flags that add Scanner to your library and include paths
 # as well as cover common flags for building a shared library.
-SCANNER_FLAGS = `python -c "import scannerpy.stdlib.build_flags"`
+SCANNER_CFLAGS = `python -c "import scannerpy.stdlib.build_flags as b; b.print_compile_flags()"`
+SCANNER_LD_FLAGS = `python -c "import scannerpy.stdlib.build_flags as b; b.print_link_flags()"`
 
-# Change this to whatever your OpenCV directory is
-OpenCV_DIR=/opt/opencv-3.2.0
+# Change this to wherever you installed deps.sh to
+INSTALL_DIR=../../../thirdparty/install
 
 all: build/libresize_op.so
 
@@ -16,8 +17,8 @@ build/resize.pb.cc: resize.proto
 
 # g++ builds the op library
 build/libresize_op.so: build/resize.pb.cc resize_op.cpp
-	g++ $^ -o $@ ${SCANNER_FLAGS} \
-		-I ${OpenCV_DIR}/include -L ${OpenCV_DIR}/lib -lopencv_core -lopencv_imgproc \
+	g++ $^ -o $@ ${SCANNER_CFLAGS} ${SCANNER_LD_FLAGS} \
+		-I ${INSTALL_DIR}/include -L ${INSTALL_DIR}/lib -lopencv_core -lopencv_imgproc \
 		-I build
 
 .PHONY: clean
