--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,14 @@ jobs:
   include:
     - stage: "Test build"
       script: "travis_retry ./scripts/travis-build.sh"
+    - stage: "Test build"
+      language: generic
+      services:
+        addons:
+      install:
+        pip3 install requests[security] --upgrade
+      script: "travis_retry ./scripts/travis-osx-build.sh"
+      os: osx
     - stage: test
       script: "travis_retry ./scripts/travis-test.sh"
       env: TEST_TYPE=cpp 
@@ -56,11 +64,3 @@ jobs:
       script: "travis_retry ./scripts/travis-build.sh"
       env:
         - BUILD_TYPE=gpu-9.1-cudnn7
-    - stage: build
-      language: generic
-      services:
-        addons:
-      install:
-        pip3 install requests[security] --upgrade
-      script: "travis_retry ./scripts/travis-osx-build.sh"
-      os: osx
