--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,8 @@ add_test(
   NAME PythonTests
   COMMAND pytest ${CMAKE_CURRENT_SOURCE_DIR} -x -vv)
 
-add_executable(FfmpegTest ffmpeg_test.cpp)
-target_link_libraries(FfmpegTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN} scanner scanner_stdlib)
-add_test(FfmpegTests FfmpegTest)
+if (NO_FFMPEG STREQUAL "false")
+  add_executable(FfmpegTest ffmpeg_test.cpp)
+  target_link_libraries(FfmpegTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN} scanner scanner_stdlib)
+  add_test(FfmpegTests FfmpegTest)
+endif()
