More tests fixes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 include(${CMAKE_SOURCE_DIR}/cmake/Util/Op.cmake)
-build_op(LIB_NAME scanner_tests CPP_SRCS test_ops.cpp)
+build_op(LIB_NAME scanner_tests CPP_SRCS test_ops.cpp PROTO_SRC test_ops.proto)
 
 find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui video)
 target_link_libraries(scanner_tests PUBLIC ${OpenCV_LIBRARIES})
