Fix C++ op tutorial

--- a/examples/tutorials/resize_op/CMakeLists.txt
+++ b/examples/tutorials/resize_op/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 
 execute_process(
   OUTPUT_VARIABLE SCANNER_CMAKE_PATH
-  COMMAND python3 -c "import scannerpy.stdlib.build_flags as b; b.print_cmake()")
+  COMMAND python3 -c "import scannerpy.build_flags as b; b.print_cmake()")
 include(${SCANNER_CMAKE_PATH})
 
 # build_op will create a shared library called lib${LIB_NAME}.so that builds
@@ -19,5 +19,5 @@ build_op(
 # The library specified in build_op is a normal CMake target, so you can use all
 # the normal CMake functions with it.
 find_package(OpenCV REQUIRED COMPONENTS core imgproc)
-include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(resize_op PUBLIC "${OpenCV_LIBRARIES}")
+target_include_directories(resize_op PUBLIC ${OpenCV_INCLUDE_DIRS})
+target_link_libraries(resize_op PUBLIC ${OpenCV_LIBRARIES})
