Add CMake doxygen target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,3 +154,11 @@ endforeach()
 if (BUILD_TESTS)
   add_subdirectory(tests)
 endif()
+
+if (BUILD_DOCS)
+  set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
+  set(DOXYGEN_EXCLUDE_PATTERNS json.hpp concurrentqueue.h nvcuvid.h cuviddec.h tinyformat.h blockingconcurrentqueue.h thread_pool.h)
+  find_package(Doxygen REQUIRED)
+  set(DOXYGEN_PROJECT_NAME "Scanner C++ API")
+  doxygen_add_docs(doxygen ${PROJECT_SOURCE_DIR}/scanner)
+endif()
