Invoke build.sh command with bash in Dockerfile to ensure it is found

--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -24,7 +24,7 @@ RUN cd /opt/scanner && \
           .. && \
     cd .. && \
     (yes | pip3 uninstall grpcio protobuf) && \
-    ./build.sh && \
+    bash ./build.sh && \
     ldconfig
 
 ENV LC_ALL C.UTF-8
