--- a/docker/ubuntu16.04/Dockerfile.cpu
+++ b/docker/ubuntu16.04/Dockerfile.cpu
@@ -5,7 +5,8 @@ FROM ${base_tag}
 MAINTAINER Will Crichton "wcrichto@cs.stanford.edu"
 ARG cores=1
 
-RUN bash ./deps.sh --install-all --prefix /usr/local && \
+RUN bash ./deps_openvino.sh && \ 
+    bash ./deps.sh --install-all --prefix /usr/local && \
     rm -rf /opt/scanner-base
 
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
