--- a/.travis.yml
+++ b/.travis.yml
@@ -57,4 +57,8 @@ jobs:
     - stage: build
       script: "travis_retry ./scripts/travis-build.sh"
       env:
+        - BUILD_TYPE=gpu-10.0-cudnn7
+    - stage: build
+      script: "travis_retry ./scripts/travis-build.sh"
+      env:
         - BUILD_TYPE=gpu-10.1-cudnn7
